Minor edits to formatting and some clarifications. Expanded author list for FODO-transport

--- a/FODO-transport.ipynb
+++ b/FODO-transport.ipynb
@@ -8,7 +8,7 @@
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
     "# Computer Lab: Simulated beam transport in a FODO line\n",
-    "##### Author: K. Ruisard\n",
+    "##### Authors: K. Ruisard, N. Evans, V. Morozov, F. Lin\n",
     "\n",
     "## We will be simulating beam transport in simple beamlines. To do this, we will be running the Elegant code in the [Sirepo](https://beta.sirepo.com) environment. Questions to be turned in for credit are in **bold** and numbered.\n",
     "### Python Notes: \n",
@@ -82,7 +82,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### B) Solving for matched solution\n",
     "\n",
@@ -281,13 +283,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### E) Matched solution with decreased focusing strength\n",
+    "### E) Matched solution with decreased quadrupole strength\n",
     "\n",
     "Now we will look at what happens to the matched solution when we reduce the strength of quadrupole focusing. We will reduce the quadrupole strength but hold the emittance fixed. If we consider the RMS envelope equation:\n",
     "\n",
     "$\\frac{d^2 \\sigma_x}{ds^2}=-K_x \\sigma_x+  \\frac{\\epsilon_x^2}{\\sigma_x^3}$\n",
     "\n",
-    "the relative strength of the focusing term (proportional to K) against the defocusing emittance term (proportional to $\\epsilon$) is less.\n",
+    "With weaker quadrupoles, the relative strength of the focusing term (proportional to K) against the defocusing emittance term (proportional to $\\epsilon$) is less.\n",
     "\n",
     "Predict what effect you expect the weaker focusing will have on the matched solution. Will the average beam size along the cell get larger or smaller? Will the aspect ratio between $\\sigma_x$ and $\\sigma_y$ inside the quadrupoles get larger or smaller?\n",
     "\n",
@@ -316,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q8) Record the matched envelope values in the new FODO cell:**\n",
+    "**Q8) Record the following parameters for the matched solution in the new FODO cell:** \n",
     "\n",
     "| X dimension           | Value |   Y dimension          | Value|\n",
     "|-----------------------|-------|------------------------|------|\n",
@@ -339,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accelerator complexes can contain many sections, where the focusing strength and quadrupole arrangement can be quite different between sections. We will consider a simplified version of this. We will first transport beam through a beamline comprised of 10 of our original \"FODOcell,\" then inject into a second line comprised of 10 weaker focusing copies of \"FODOcell2.\"  \n",
+    "Accelerator complexes can contain many sections, where the focusing strength and quadrupole arrangement can be quite different between sections. We will consider a simplified version of this. We will first transport beam through a beamline comprised of 10 of our original \"FODOcell,\" then transition into a second line comprised of 10 weaker focusing copies of \"FODOcell2.\"  \n",
     "\n",
     "3. Set the focusing strength in \"FODOcell2\" to be closer to (but still weaker than) the focusing in \"FODOcell.\" Set the strength of each quadrupole in \"FODOcell2\" to be $|k1|=0.5 m^{-2}$.\n",
     "\n",
@@ -349,7 +351,7 @@
     "\n",
     "5. Simulate beam evoution through \"FODObeamline\" \\\n",
     "First, Set Matched=No under the \"twiss_output\" command. \\\n",
-    "Also, set the initial Twiss parameters to be matched to \"FODOcell\": \\\n",
+    "Also, set the initial Twiss parameters to the matched value found for \"FODOcell\": \\\n",
     "$\\beta_x = \\beta_y = 7.206$ meters and $\\alpha_x = -\\alpha_y = -1.146$\n"
    ]
   },
@@ -376,7 +378,8 @@
     "Is this solution matched for the period $L=5$ m? (the length of a single FODO cell)?\\\n",
     "Does there exist a solution that is matched for period $L=5$ m in all 20 cells?**\n",
     "\n",
-    "Note that the maximum $\\sigma_x$ for this solution is larger than the maximum $\\sigma_x$ for both matched solutions calculated previously. A strong motivation for maintaining matched beams is to keep the beam as small as possible for the given quadrupole focusing strength. "
+    "Note that the matched solution is defined by the length over which a periodic solution is found. When accelerator scientists refer to the matched solution, it is usually implied that we mean for the shortest focusing period (e.g., the FODO cell). \\\n",
+    "Also note that the maximum $\\sigma_x$ for the matched solution from step 6 is larger than the maximum $\\sigma_x$ for both matched FODO cells found above. A strong motivation for maintaining matched beams is to keep this maximum size as small as possible during beam transport. "
    ]
   },
   {
@@ -387,15 +390,8 @@
     "\n",
     "The typical strategy to transition beam between sections of the accelerator while maintaining optimal transport is to add a matching section. This section contains quadrupoles whose strengths are optimized to transition the output bunch parameters $\\alpha, \\beta$ from the first section into the optimal (matched) parameters for the next section. A matching section can also be used to customize the beam parameters in a specific part of the accelerator. For example, in a collider  the beam is usually much smaller at the interaction point than elsewhere in the accelerator. \n",
     "\n",
-    "Exercise with matching section to be added.\n"
+    "Exercise with matching/insertion section to be added...\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
