--- a/Longitudinal-Dynamics.ipynb
+++ b/Longitudinal-Dynamics.ipynb
@@ -373,6 +373,17 @@
     "H_max = 8e-14 / (2*np.pi) # maximum action in bunch\n",
     "nparticles= 500 # number of particles in bunch\n",
     "\n",
+    "###########################\n",
+    "## Don't change below\n",
+    "###########################\n",
+    "\n",
+    "#Defining variables\n",
+    "g_t3    = 21.8  # gamma_t: initial = 21.8\n",
+    "phi_sf3 = 0    # Synchronous phase: initial = 0\n",
+    "E_s3    = 8*GeV # synchronous energy: initial = 8*GeV\n",
+    "eta3    = 1/g_t3**2 - (0.938*GeV)**2 / E_s3**2\n",
+    "beta_s3 = np.sqrt(1 - ( (0.938*GeV) / E_s3 )**2 )  # Relativistic beta\n",
+    "k3      = (2*np.pi*h*eta3)/(beta_s3**2 * E_s3)     # coefficent (2pi h eta)/ (beta^2 E)\n",
     "\n",
     "# -- make contours\n",
     "voltage_upstream = 1.6*MeV # cavity voltage of upstream accelerator\n",
@@ -450,13 +461,7 @@
     "## Don't change below\n",
     "###########################\n",
     "\n",
-    "#Defining variables\n",
-    "g_t3    = 21.8  # gamma_t: initial = 21.8\n",
-    "phi_sf3 = 0    # Synchronous phase: initial = 0\n",
-    "E_s3    = 8*GeV # synchronous energy: initial = 8*GeV\n",
-    "eta3    = 1/g_t3**2 - (0.938*GeV)**2 / E_s3**2\n",
-    "beta_s3 = np.sqrt(1 - ( (0.938*GeV) / E_s3 )**2 )  # Relativistic beta\n",
-    "k3      = (2*np.pi*h*eta3)/(beta_s3**2 * E_s3)     # coefficent (2pi h eta)/ (beta^2 E)\n",
+    "# -- cavity voltage\n",
     "voltage = (1.6 * voltage_error)*MeV # cavity voltage: initial = 1.6*MeV\n",
     "\n",
     "# Making data arrays\n",
@@ -558,7 +563,10 @@
     "\n",
     "This spiraling is a result of the amplitude-dependent tune that you measured in Section 2. The amplitude dependence arises from the fact that the focusing in the RF bucket is not linear, but instead the focusing strength decreases the farther particles get from the center. \n",
     "\n",
-    "Now, we will look at the effect of various errors. In order to view the distribution more clearly, turn off the black trace by setting `plot_tracer_Flag = False`. Increase `nplots=8`. The red contour highlights the field contour of the particle with the highest *action*. In other words, the outermost particle will live on this contour.\n",
+    "Now, we will look at the effect of various errors.\\\n",
+    "In order to view the distribution more clearly, turn off the black trace by setting `plot_tracer_Flag = False`.\\\n",
+    "Increase `nplots=8`. \\\n",
+    "The red contour highlights the field contour of the particle with the highest *action*. In other words, the outermost particle will live on this contour.\n",
     "\n",
     "\n",
     "\n"
