--- a/FODO-transport.ipynb
+++ b/FODO-transport.ipynb
@@ -406,8 +406,8 @@
     "- When defining the new quads assign initial guesses for their strength to be the same as the FODO quad strengths. When setting the positive or negative sign of the strengths, maintain the same alternating patter as in the FODO cell.\n",
     "\n",
     "Switch to the “Control” tab:  \n",
-    "- Add the strengths of quads 2-4 as \"optimization_varibale\"s following the example setup for quad 1 (QM1) \n",
-    "- Assuming that the horizontal and vertical emittances of the injected beam are equal, we would like to have equal horizontal and vertical beta functions at the end of the matching section: $\\beta_x = \\beta_y$. To have no correlation between the spatial and angular coordinates, the Twiss alpha funcitons have to be zero at the end of the section: $\\alpha_x = 0$ and $\\alpha_y =0$. Add the $\\beta_x = \\beta_y$ and $\\alpha_y =0$ constraints as \"optimization_term\"s following the example of that for $\\alpha_x = 0$.\n",
+    "- Add the strengths of quads 2-4 as \"optimization_variable\" following the example setup for quad 1 (QM1) \n",
+    "- Assuming that the horizontal and vertical emittances of the injected beam are equal, we would like to have equal horizontal and vertical beta functions at the end of the matching section: $\\beta_x = \\beta_y$. To have no correlation between the spatial and angular coordinates, the Twiss alpha functions have to be zero at the end of the section: $\\alpha_x = 0$ and $\\alpha_y =0$. Add the $\\beta_x = \\beta_y$ and $\\alpha_y =0$ constraints as \"optimization_term\"s following the example of that for $\\alpha_x = 0$.\n",
     "\n",
     "Under “Visualization” tab:\n",
     "- Make sure to select \"MATCHsection\" in the \"Beamline\" menu.\n",
@@ -447,9 +447,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -461,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
