Kiersten+Nick edits from 11-18-21

--- a/Dispersion-Chromaticity.ipynb
+++ b/Dispersion-Chromaticity.ipynb
@@ -14,8 +14,8 @@
     "### Python Notes: \n",
     "- You wont need much python specific code for this lab, but here are some tips:\n",
     "- Press shift+enter to execute a cell, or use the play button at the top of the window\n",
-    "- Make sure you exectue cells in order, or re-exectue cells if you change something at the top of the notebook.\n",
-    "- You can also exectue the whole notebook by using 'Run all cells' under the 'Run' tab.\n",
+    "- Make sure you execute cells in order, or re-execute cells if you change something at the top of the notebook.\n",
+    "- You can also execute the whole notebook by using 'Run all cells' under the 'Run' tab.\n",
     "\n",
     "</br>\n",
     "Also helpful: Shift+right click brings up OS/browser right-click menu, can copy image or save.\n",
@@ -31,7 +31,7 @@
     "\n",
     "### A) Dispersion in FODO lattice\n",
     "\n",
-    "In other labs, we simulate beamlines without dipoles. Dipoles create dispersion ($\\eta$ or D, depending who you talk to), which describes the evolution of transverse size for particles/beams that are off-momentum. Off-momentum particles experience a different force in the dipole than the design orbit, as they have different magnetic rigidity $B\\rho=\\frac{p}{q}$. Dispersion can be calculated as a function of s and can have a periodic (matched) solution, similar to the $\\beta$ and $\\alpha$ functions.\n",
+    "In other labs, we simulate beamlines without dipoles. Dipoles create dispersion ($\\eta$ or D, depending who you talk to), which describes the evolution of transverse size for particles/beams that are off-momentum. Off-momentum particles experience a different force in the dipole than the design orbit, as they have different magnetic rigidity $B\\rho=\\frac{p}{q}$. Dispersion is a function of s and can have a periodic (matched) solution, similar to the $\\beta$ and $\\alpha$ functions.\n",
     "\n",
     "The initial conditions for this simulation:\n",
     "\n",
@@ -43,26 +43,23 @@
     "|  Quadrupole geometric strength | $K = 0.6$ m$^{-2}$|\n",
     "|  FODO cell length | $L = 5$ m|\n",
     "\n",
-    "Open simulation “FODObeamline.” \n",
-    "> https://www.sirepo.com/elegant#/source/NYrwE02y\n",
+    "Open simulation “FODObeamline-with-dipole” \n",
+    "> https://www.sirepo.com/elegant#/source/SMHkFUFD\n",
     "\n",
-    "You already access this same simulation in the FODO-transport lab. Clicking on the link should lead to a prompt to either \"open simulation\" or \"open existing simulation.\" Select \"open simulation,\" which will revert changes that you made during the previous lab. To double check, make sure quadrupole strengths \"k1\" are set to $0.6\\ m^{-2}$. \n",
+    "Initially, this simulation lattice is a FODO cell that is identical to the cell used in the FODO-transport lab. \n",
     "\n",
     "- Go to Visualization tab at top of the page.\n",
-    "- Change simulation to run over 1 cell (simulate beamline “FODOcell” in the drop down box). \n",
-    "- Note the Sx and Sy values in the run_setup plot.\n",
+    "- Run simulation to run over 1 cell (make sure beamline \"FODOcell\" is selected). \n",
+    "- verify that calculated solution is matched. If not, under Tab: Control -> twiss_output, Change Matched to Yes and re-run simulation. \n",
+    "- Note down matched beam size (Sx and Sy in the run_setup.sigma plot) at the location of the quads QF and QD for future reference. \n",
     "\n",
     "\n",
-    "Next, add a dipole SBEND element to your FODO cell: \n",
+    "Next, add a dipole element to your FODO cell: \n",
     "- Go to the 'Lattice Tab' at the top of the screen\n",
     "- Under 'Beamlines', hover over FODOcell, and click 'Edit'\n",
-    "- Replace 2 meter drift (D2) with two 0.75 meter drifts (D3). \n",
-    "- Sandwich a dipole between the two difts (0.5 m, 20 deg dipole - element CSBEND):\n",
-    "![alt text](images/dipole.png)\n",
-    "- You can add your new element in by dragging and dropping the name from the right hand side into the left hand side.\n",
-    "- Under Tab: Control -> twiss_output, Change Matched to Yes (page 1). \n",
-    "- Go to Visualization tab at top of the page.\n",
-    "- Change simulation to run over 1 cell (simulate beamline “FODOcell” in the drop down box). \n",
+    "- Delete the 0.5 meter drift \"D3\" and, in its place, add the RBEN element \"DIPO\" \n",
+    "- \"DIPO\" is a 20-degree dipole with rectangular geometry (as opposed to sector geometry, which is also an option).\n",
+    "- Run simulation over modified FODO cell\n",
     "\n",
     "Scroll down and to the twiss_output plot.\n",
     "Observe dispersion $\\eta_x$ (etax). \n",
@@ -76,18 +73,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q1) What is minimum dispersion in this lattice?**\n",
-    "\n",
-    "min⁡ $\\eta_x=$ "
+    "**Q1) What is minimum dispersion in this lattice? At what location does this occur (focusing quad, defocusing quad or drift)?\\\n",
+    "If we compare this lattice to an identical FODO cell without the dipole, would the horizontal beam size at this location be larger or smaller?  \n",
+    "What about the vertical beam size?**\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q2) Assuming a 0.1% ($\\Delta p/p $) energy spread in the beam, what is the horizontal beam size we expect in the focusing quadrupole QF? How does this compare to our beam size without energy spread?**\n",
+    "**Q2) Assuming a 0.1% momentum spread in the beam, what is the horizontal beam size we expect in the focusing quadrupole QF?\\\n",
+    "How does this compare to our beam size without energy spread? \\\n",
+    "What is the vertical beam size with and without energy spread?**\n",
     "\n",
-    "hint: $\\sigma_x^2 = \\epsilon_x \\beta_x+ \\eta_{max}^2 \\frac{\\Delta p}{p_0} $\n",
+    "\n",
+    "hint: $\\sigma_x^2 = \\epsilon_x \\beta_x+ \\eta_{max}^2 \\left( \\frac{\\Delta p}{p_0} \\right)^2$, where $\\Delta p/p $ is the fractional momentum spread.\n",
     "\n",
     "hint: Use max eta and the $\\epsilon_x$ from above."
    ]
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Enable matching (Under in Control tab -> twiss_output command -> set “Matched” to “yes”).  \n",
+    "Enable matching (Under the Control tab -> twiss_output command -> set “Matched” to “yes”).  \n",
     "- Run simulation; you should see that beamline is unstable, i.e. there are no periodic solutions. \n",
     "Let’s add some additional focusing to correct that.\n",
     "- “Turn on” the flanking quadrupoles by setting Q2: $k_1=1.3\\ m^{-2}$ and Q3: $k_1=-1.6\\ m^{-2}$. \n",
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that this lattice still has chromaticity; that is, although off-momentum particles will not increase the beam size in the dispersion-free drifts, they will still feel different focusing strength and have a tune different from the on-momentum particles.  "
+    "Note that this lattice still has chromaticity; that is, although off-momentum particles do not increase the beam size in the dispersion-free drifts, on average they still feel different focusing strengths and have a tune different from the on-momentum particles.  "
    ]
   },
   {
@@ -215,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
