Kiersten+Nick edits from 12/2/21

--- a/Dispersion-Chromaticity.ipynb
+++ b/Dispersion-Chromaticity.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q1) What is minimum dispersion in this lattice?**\n",
+    "**Q1) What is the minimum and maximum values of dispersion in this lattice?**\n",
     "\n",
     "min⁡ $\\eta_x=$ "
    ]
@@ -155,7 +155,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### C) Tune in a ring\n",
+    "Note that dispersion is cancelled for only part of the cell - it is not zero everywhere. \n",
+    "\n",
+    "**Q5) What is the maximum dispersion in this cell?**\n",
+    "\n",
+    "$\\eta_x = $\n",
+    "\n",
+    "**Q6) Assuming the pipe is 2 cm in diameter, what is the largest momentum spread that can be tolerated before we start scraping on the beam pipe?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### C) Chromaticity\n",
     "\n",
     "Repeat your cell 9 times to create a ring. \n",
     "- Under the Lattice tab, make a new beamilne. \n",
@@ -163,7 +176,7 @@
     "- Rerun the simulation under the Visualization tab.\n",
     "- Make sure you select your new beamline from the drop down menu.\n",
     "\n",
-    "**Q5) Record x and y tunes (to 3 significant figures):**\n",
+    "**Q7) Record x and y tunes (to 3 significant figures):**\n",
     "\n",
     "Look for nux and nuy in the parameters list."
    ]
@@ -181,12 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q6) Did you expect the tunes to be split in the way that they are?  \n",
-    "What is a nearby resonant stop-band ($\\nu =\\frac{n}{m}$ for integer m,n) that might be a concern for this lattice (for either plane x or y)?**\n",
-    "\n",
-    "Hint: consider only low-order resonances with m<=4 \n",
-    "\n",
-    "---"
+    "**Q8) In our FODO cell, we apply equal focuing strengths in both planes and as a result, $\\nu_x=\\nu_y$. Looking at the beta functions for one DBA cell, explain why you would not necessarily expect the tunes to be be equal.**\n"
    ]
   },
   {
@@ -200,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q7) For a 0.1% energy spread in the beam, what is the spread of tunes due to chromaticity?**\n",
+    "**Q9) For a 0.1% momentum spread in the beam, what is the spread of tunes due to chromaticity?**\n",
     "\n",
     "$\\Delta \\nu_x = C_x \\frac{\\Delta p}{p_0}$ (hint: in Elegant Twiss output, look for dnux/dp and dnuy/dp for chromaticity values) "
    ]
@@ -209,15 +217,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q14) Will this tune spread push particles onto the nearby low-order resonances identified above?**"
+    "Add plot here?\n",
+    "\n",
+    "**Q10) Assuming we can tolerance resonances of order 4 and above, but cannot operate on resonances of order 3 and below, how big of a momentum spread can we tolerance in this ring?**\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q11) Comparing your answers to Q6 and Q10, is the momentum acceptance of this ring limited by chromaticity or by dispersion?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -229,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
