update author list; small fix to logic in resonance plot of dispersion-chromaticity

--- a/Dispersion-Chromaticity.ipynb
+++ b/Dispersion-Chromaticity.ipynb
@@ -8,7 +8,7 @@
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
     "# Computer Lab: Dispersion and Chromaticity in Simulated Beam Transport\n",
-    "##### Author: K. Ruisard and N. Evans\n",
+    "##### Authors: K. Ruisard, N. Evans, N. Neveu and L. Dovlatyan\n",
     "\n",
     "## We will be simulating beam transport in simple beamlines. To do this, we will be running the Elegant code in the [Sirepo](https://beta.sirepo.com) environment. Questions to be turned in for credit are in **bold** and numbered.\n",
     "### Python Notes: \n",
@@ -273,24 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "jupyter": {
      "source_hidden": true
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## This cell includes the function that makes the plot below. You don't need to look at it, just execute it once.\n",
     "\n",
@@ -413,7 +403,7 @@
     "delta_nuy = Cy*sigma_dp\n",
     "\n",
     "\n",
-    "from tunediagram import tunediagram\n",
+    "#from tunediagram import tunediagram\n",
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=[6,6])\n",
     "\n",
@@ -423,7 +413,7 @@
     "plt.ylabel('vertical tune'); plt.xlabel('horizontal tune');\n",
     "\n",
     "# -- plot tune footprint over resonance lines\n",
-    "if nux & nuy:\n",
+    "if (nux!=0) & (nuy!=0):\n",
     "    plt.plot([nux],[nuy],'ko',label='ring tune')\n",
     "    plt.plot([nux+delta_nux],[nuy+delta_nuy],'k.')\n",
     "    plt.plot([nux,nux+delta_nux],[nuy,nuy+delta_nuy],'k-');\n",
