--- a/Longitudinal-Dynamics.ipynb
+++ b/Longitudinal-Dynamics.ipynb
@@ -8,7 +8,7 @@
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
     "# Computer Lab: Longitudinal Motion\n",
-    "##### Author: E. Harms, N. Neveu\n",
+    "##### Author: E. Harms, N. Neveu, K. Ruisard, N. Evans\n",
     "\n",
     "This worksheet demonstrates phase space motion in the longitudinal degree of freedom.   \n",
     "Questions to be answered and turned in for grade are typeset in **Bold** Type.\n",
@@ -764,9 +764,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -778,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
