--- a/Transverse-Dynamics.ipynb
+++ b/Transverse-Dynamics.ipynb
@@ -8,7 +8,7 @@
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
     "# Computer Lab: Transverse Dynamics\n",
-    "##### Author: M. Syphers, E. Harms, N. Neveu\n",
+    "##### Author: M. Syphers, E. Harms, N. Neveu, K. Ruisard and N. Evans\n",
     "\n",
     "This session deals with transverse dynamics in three sections. The first demonstrates the development of a beam envelope by tracking a particle repeatedly through a FODO structure. The second demonstrates the development of ellipses in phase space for the same FODO structure. The third demonstrates a local orbit distortion in a FODO lattice and how to correct it. \n",
     "\n",
@@ -558,9 +558,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -572,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
