fixed problem numbers

--- a/Transverse-Dynamics.ipynb
+++ b/Transverse-Dynamics.ipynb
@@ -198,7 +198,7 @@
     "The two plots below are a trajectory plot plus a phase space plot. As the particle passes through the FODO lattice, its position and angle are kept track of and plotted in the phase space plot. For `N_turn= 1`, follow and understand how the lines in the two plots are related to one another. A change in slope on the phase space plot corresponds to a “kink” seen in the trajectory plot, etc. *Note that the locations of the quadrupole magnets in $s$ are shifted by 5 meters compared to the plots in Part 1.*\n",
     "- Change `N_turn` to 2, 5, 10, 20 and 50, examining how the two plots change.\n",
     "\n",
-    "**Q7) With `N_turn=50`, print out or make a sketch of this phase space plot and identify each ellipse with its corresponding quadrupole (F or D) and whether it is at the entrance or exit of the magnet.**\n",
+    "**Q9) With `N_turn=50`, print out or make a sketch of this phase space plot and identify each ellipse with its corresponding quadrupole (F or D) and whether it is at the entrance or exit of the magnet.**\n",
     "\n",
     "These phase space ellipses represent the invariants of our system. As you can see, the particle is constrained to move along this ellipse. While the particle is constrained to this ellipse, the orientation and aspect ratio of the ellipse depend on where in the lattice we are looking. However, the area of the ellipse is the same for all orientations. This constant area is called the *emittance.*\n"
    ]
@@ -365,9 +365,9 @@
     "- Set `plot_single_location = True`. This will change the phase space plot so that we are only viewing the particle trajectory as it crosses s=0.\n",
     "- Slowly increase `N_turn2` in steps of 1 until the trajectory makes 1 turn around the phase space ellipse (it won't be exact, so pick the nearest point).\n",
     "\n",
-    "**Q?) Defining `nu_f` to be the number of revolutions in phase space per turn, calculate and record both `nu_f` and `1 - nu_f`. Which is closer to the value of `nu` calculated by the script? (see output above plot)** The formula used to calculate `nu` is from the thin lens approximation of a FODO cell, $\\nu = N_{cell} \\cdot \\frac{1}{\\pi} \\arcsin{\\frac{L}{2F}} $. The phase advance per cell is multiplied by the number of FODO cells.\n",
+    "**Q10) Defining `nu_f` to be the number of revolutions in phase space per turn, calculate and record both `nu_f` and `1 - nu_f`. Which is closer to the value of `nu` calculated by the script? (see output above plot)** The formula used to calculate `nu` is from the thin lens approximation of a FODO cell, $\\nu = N_{cell} \\cdot \\frac{1}{\\pi} \\arcsin{\\frac{L}{2F}} $. The phase advance per cell is multiplied by the number of FODO cells.\n",
     "\n",
-    "**Q?) Explain why, using the information from the single-location phase space plot, it is impossible to differentiate between `nu=nu_f` and `nu=1-nu_f`. What leads to this ambiguity?**\n"
+    "**Q11) Explain why, using the information from the single-location phase space plot, it is impossible to differentiate between `nu=nu_f` and `nu=1-nu_f`. What leads to this ambiguity?**\n"
    ]
   },
   {
@@ -506,7 +506,7 @@
     "- increase `Nturn_3` to allow the average trajectory to approach the closed orbit. \n",
     "\n",
     "\n",
-    "**Q8) What steering error, $\\theta_1$ would generate a ~25 mm (1 inch) maximum displacement of the *closed orbit* in the beam pipe?**          \n",
+    "**Q12) What steering error, $\\theta_1$ would generate a ~25 mm (1 inch) maximum displacement of the *closed orbit* in the beam pipe?**          \n",
     "hint: Be careful! The closed orbit displacement is NOT the particle displacement! Remember, a particle on the closed orbit will follow the same path every turn, while all other particles oscillate around the closed orbit. \n",
     "\n",
     "\n"
@@ -522,13 +522,20 @@
     "- Restore the setting `theta_1 = 0.05e-3`\n",
     "- Return to plotting only the first turn, by setting `N_turn3 = 1`.\n",
     "\n",
-    "**Q9) Propose a general procedure for setting these two correctors, remembering that a steering magnet can only change the trajectory angle.**\n",
+    "**Q13) Propose a general procedure for setting these two correctors, remembering that a steering magnet can only change the trajectory angle.**\n",
     "\n",
     "\n",
     "Carefully adjust the strengths of these two correctors (`theta_2` and `theta_3`) so that a particle whose trajectory starts with x = 0, x’ = 0 before the error element ends up with x = 0 and x’ = 0 after corrector 2. Check the success of your *orbit bump* by setting `N_turn3` to some large value and seeing that the orbit indeed repeats itself.\n",
     "\n",
-    "**Q10) With `theta_1 = 0.05e-3`, what values of `theta_2` and `theta_3` are required to bring the trajectory back to x = 0 and x' = 0?**\n"
+    "**Q14) With `theta_1 = 0.05e-3`, what values of `theta_2` and `theta_3` are required to bring the trajectory back to x = 0 and x' = 0?**\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
