--- a/Transverse-Dynamics.ipynb
+++ b/Transverse-Dynamics.ipynb
@@ -141,7 +141,7 @@
     "################################\n",
     "\n",
     "#Number of turns and half cells\n",
-    "N_turn1  = 1 # inital turns: 1 \n",
+    "N_turn1  = 100 # inital turns: 1 \n",
     "N_hcell1 = 8 # initial half cells: 8\n",
     "\n",
     "#Defining some variables\n",
@@ -200,7 +200,7 @@
     "\n",
     "**Q9) With `N_turn=50`, print out or make a sketch of this phase space plot and identify each ellipse with its corresponding quadrupole (F or D) and whether it is at the entrance or exit of the magnet.**\n",
     "\n",
-    "These phase space ellipses represent the invariants of our system. As you can see, the particle is constrained to move along this ellipse. While the particle is constrained to this ellipse, the orientation and aspect ratio of the ellipse depend on where in the lattice we are looking. However, the area of the ellipse is the same for all orientations. This constant area is called the *emittance.*\n"
+    "These phase space ellipses represent the invariants of our system. As you can see, the particle is constrained to move along this ellipse. While the particle is constrained to this ellipse, the orientation and aspect ratio of the ellipse depend on where in the lattice we are looking. However, the area of the ellipse is the same for all orientations. This constant area is described by the quantity *emittance.*\n"
    ]
   },
   {
