--- a/Dispersion-Chromaticity.ipynb
+++ b/Dispersion-Chromaticity.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q2) Assuming a 0.1% momentum spread in the beam, what is the horizontal beam size we expect in the focusing quadrupole QF? How does this compare to our beam size without energy spread? \\\n",
+    "**Q2) Assuming a 0.1% momentum spread ($\\frac{\\delta p}{p}=0.001$) in the beam, what is the horizontal beam size we expect in the focusing quadrupole QF? How does this compare to our beam size without energy spread? \\\n",
     "What is the vertical beam size in QF with and without energy spread?**\n",
     "\n",
     "Use max eta and the $\\epsilon_x$ from above.\n",
@@ -189,7 +189,7 @@
     "\n",
     "Because the effect of dispersion depends on the beam momentum spread, it presents a limit to the amount of spread that can be transported without losing particles.\n",
     "\n",
-    "**Q6) Assuming the vacuum chamber is a pipe with diameter 5 cm, what is the largest momentum spread that can be tolerated before particles start to hit the chamber wall ?** \n",
+    "**Q6) Assuming the vacuum chamber is a pipe with 2.5 cm radius, what is the largest momentum spread that can be tolerated before particles start to hit the chamber wall ?** \n",
     "\n",
     "You will need to use this equation again: $\\sigma_x^2 = \\epsilon_x \\beta_x+ \\eta^2 \\left( \\frac{\\Delta p}{p_0} \\right)^2$ \n",
     "\n",
@@ -275,9 +275,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -415,8 +412,8 @@
     "# -- plot tune footprint over resonance lines\n",
     "if (nux!=0) & (nuy!=0):\n",
     "    plt.plot([nux],[nuy],'ko',label='ring tune')\n",
-    "    plt.plot([nux+delta_nux],[nuy+delta_nuy],'k.')\n",
-    "    plt.plot([nux,nux+delta_nux],[nuy,nuy+delta_nuy],'k-');\n",
+    "    plt.plot([nux+delta_nux,nux-delta_nux],[nuy+delta_nuy,nuy-delta_nuy],'k.')\n",
+    "    plt.plot([nux-delta_nux,nux+delta_nux],[nuy-delta_nuy,nuy+delta_nuy],'k-');\n",
     "    "
    ]
   },
@@ -438,9 +435,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -452,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
