removed plot limits for part 3 exercise

--- a/Transverse-Dynamics.ipynb
+++ b/Transverse-Dynamics.ipynb
@@ -449,7 +449,6 @@
     "    if plot_average_flag == True:\n",
     "        plt.plot(s3[:,0],x3.mean(axis=1)*10**3,'k--',linewidth=2,color='red',label='Average of plotted trajectory')  \n",
     "\n",
-    "    yl = plt.ylim(-10,10)\n",
     "    # -- kickers\n",
     "    z = [z1,z2,z3]; names = ['error element','corrector 1', 'corrector 2']; colors = ['C0','C1','C1']\n",
     "    for i in range(3):\n",
@@ -540,9 +539,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -554,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
