adjusted instructions for section 2 Q7, Q8 on instability threshold

--- a/Transverse-Dynamics.ipynb
+++ b/Transverse-Dynamics.ipynb
@@ -143,13 +143,13 @@
     "################################\n",
     "\n",
     "#Number of turns and half cells\n",
-    "N_turn1  = 100 # inital turns: 1 \n",
+    "N_turn1  = 1 # inital turns: 1 \n",
     "N_hcell1 = 8 # initial half cells: 8\n",
     "\n",
     "#Defining some variables\n",
     "#These will be used later\n",
     "L1       = 10  # distance between quadrupoles. initial: 10 meters\n",
-    "F1       = 8 # focal length of quadrupole lense. initial: 8 meters\n",
+    "F1       = 8  # focal length of quadrupole lense. initial: 8 meters\n",
     "\n",
     "run_exercise1(N_turn1,N_hcell1,L1,F1)"
    ]
@@ -179,12 +179,12 @@
     "\n",
     "---\n",
     "\n",
-    "Typically we think that stronger quadrupoles will provide better focusing, meaning a smaller transverse beam where the bundle of all particles has a smaller extent from the ideal orbit (machine axis). This works up to the stability threshold. If the quadrupoles become too strong, then the particle orbits will be unstable and the bundle of orbit excursions will increase. In a thin-lens FODO lattice, instability appears when when |TrM| > 2, or equivalently, when F < L/2. Here TrM is the trace of the transport matrix M. Recall that F is the quadrupole focal length; smaller F corresponds with stronger quadrupole focusing. \n",
-    "- Leaving the other parameters alone, set `F1 = L1/2`\n",
+    "Typically we think that stronger quadrupoles will provide better focusing, meaning a smaller transverse beam where the bundle of all particles has a smaller extent from the ideal orbit (machine axis). This works up to the stability threshold. If the quadrupoles become too strong, then the particle orbits will be unstable and the bundle of orbit excursions will increase. In a thin-lens FODO lattice, instability appears when when |TrM| > 2, or equivalently, when F < L/2. Here TrM is the trace of the transport matrix M. Recall that F is the quadrupole focal length; smaller F corresponds with stronger quadrupole focusing. We will set the quadrupole focal length slightly below the stability limit to visualize the instability.\n",
+    "- Leaving the other parameters alone, set `F1 = L1/2 - 0.001`\n",
     "\n",
     "**Q7) If the radius of a cylindrical vacuum chamber is 10 centimeters, and initially the particle is centered on the axis of this chamber, how far will the particle travel before it reaches the chamber wall? Give answer in meters and in number of full FODO cells.** Hint: you may need to adjust `N_hcell1` to find where this condition is met. \n",
     "\n",
-    "**Q8) Try gradually decreasing F slightly below the stability limit, F = L/2. What happens to the particle trajectory? (Does the particle amplitude grow faster, slower or remain the same?)**\n",
+    "**Q8) Try reducing F even further below the stability limit F < L/2. Try `F1 = L1/2 - 0.1` and `F1 = L1/2 - 0.2`. What happens to the particle trajectory? (Does the particle amplitude grow faster, slower or remain the same?)**\n",
     "\n",
     "---"
    ]
@@ -538,9 +538,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -552,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
