fixed error in exercise 3

--- a/Transverse-Dynamics.ipynb
+++ b/Transverse-Dynamics.ipynb
@@ -452,6 +452,7 @@
     "\n",
     "    # -- kickers\n",
     "    z = [z1,z2,z3]; names = ['error element','corrector 1', 'corrector 2']; colors = ['C0','C1','C1']\n",
+    "    yl = plt.ylim()\n",
     "    for i in range(3):\n",
     "        plt.plot([L3*z[i],L3*z[i]],yl,color=colors[i])\n",
     "        plt.text(L3*z[i]-20,yl[0]+.3,names[i],rotation=90)\n",
