--- a/Transverse-Dynamics.ipynb
+++ b/Transverse-Dynamics.ipynb
@@ -217,13 +217,13 @@
     "\n",
     "def run_exercise2(N_turn1,N_hcell2,F2,L2,plot_single_location):\n",
     "\n",
-    "    # Phase advance\n",
+    "    # Phase advance per cell\n",
     "    amp2 = L2/(2*F2)\n",
     "    mu2  = 2*np.arcsin(amp2)\n",
     "    print('mu:', np.rad2deg(mu2))\n",
     "\n",
-    "    # Calculating \n",
-    "    nu2 = (N_hcell2/2) * 2*np.arcsin(L2/(2*F2))/(2*np.pi)\n",
+    "    # Tune for whole lattice\n",
+    "    nu2 = (N_hcell2/2) * mu2/(2*np.pi)\n",
     "    print('nu:', nu2)\n",
     "\n",
     "    # Making data holders\n",
@@ -367,7 +367,7 @@
     "- Set `plot_single_location = True`. This will change the phase space plot so that we are only viewing the particle trajectory as it crosses s=0.\n",
     "- Slowly increase `N_turn2` in steps of 1 until the trajectory makes 1 turn around the phase space ellipse (it won't be exact, so pick the nearest point).\n",
     "\n",
-    "**Q10) Defining `nu_f` to be the number of revolutions in phase space per turn, calculate and record both `nu_f` and `1 - nu_f`. Which is closer to the value of `nu` calculated (see output above plot)?** The formula used to calculate `nu` is from the thin lens approximation of a FODO cell, $\\nu = N_{cell} \\cdot \\frac{1}{\\pi} \\arcsin{\\frac{L}{2F}} $. The phase advance per cell $\\mu$ is multiplied by the number of FODO cells $N_{cell}$ and divided by $2\\pi$ to obtain $\\nu$.\n",
+    "**Q10) Using the phase space plot, estimate the value of the fractional tune `nu_f`. Recall tune is the number of revolutions in phase space per turn. Also calculate `1 - nu_f` and record both values. Which is closer to the value of `nu` calculated (see output above plot)?** The formula used to calculate `nu` above is from the thin lens approximation of a FODO cell, $\\nu = N_{cell} \\cdot \\frac{\\mu}{2\\pi}$, where $\\mu = \\arcsin{\\frac{L}{2F}}$. The phase advance per cell $\\mu$ is multiplied by the number of FODO cells $N_{cell}$ and divided by $2\\pi$ to obtain $\\nu$.\n",
     "\n",
     "**Q11) Explain why, using the information from the single-location phase space plot, it is impossible to differentiate between `nu=nu_f` and `nu=1-nu_f`. What leads to this ambiguity?**\n"
    ]
